--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,8 +1,8 @@
 --- 
 - hosts: all 
-  becomes: yes 
+  become: yes
   tasks: 
   - names: i want to install apache2 webserver on ubuntu
     apt: 
       name: apache2
-      state: absentgit
+      state: absentgitgit 
