--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -5,4 +5,4 @@
   - names: i want to install apache2 webserver on ubuntu
     apt: 
       name: apache2
-      state: absentgitgit 
+      state: present 
