--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -3,6 +3,6 @@
   become: yes
   tasks: 
     - names: i want to install apache2 webserver on redhat
-      apt: 
+      yum: 
       name: apache2
       state: present 
