--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,14 +1,15 @@
 --- 
-- hosts: all 
+- name: Install Apache HTTP Server on Amazon Linux
+  hosts: your_amazon_linux_servers
   become: yes
-  tasks: 
-    - names: i want to install apache2 webserver on redhat
-      yum: 
-      name: apache2
-      state: present
+  tasks:
+    - name: Install Apache package
+      package:
+        name: httpd
+        state: present
 
-    - name: i want to start apache2 webserver on amazon linux
-      service: 
-         name: apache2
-         state:  started
-         
+    - name: Start Apache service
+      service:
+        name: httpd
+        state: started
+        enabled: yes
