--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -13,3 +13,15 @@
         name: httpd
         state: started
         enabled: yes
+
+    - name: i want to install httpd webserver on Redhat 
+      dnf :
+        name: httpd 
+        state: present 
+      when: ansible_os_family=="Redhart" 
+       
+    - name: i want to start httpd webserver on Redhat 
+      service: 
+        name: httpd 
+        state: started 
+      when: ansible_os_family=="Redhat"     
