--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,18 +1,9 @@
 ---
 - name: i want to install httpd webserver on RedHat
-  hosts: your_amazon_linux_servers
+  hosts: all 
   become: yes
   tasks:
-    - name: Install Apache package
-      package:
-        name: httpd
-        state: present
-
-    - name: Start Apache service
-      service:
-        name: httpd
-        state: started
-        enabled: yes
+ 
 
     - name: i want to install httpd webserver on RedHat 
       dnf :
