--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,9 +1,18 @@
 ---
-- name: i want to install httpd webserver on RedHat
-  hosts: all 
+- name: Install apache server   # name of the playbook
+  hosts: ec2    # target group defined in the inventory file 
   become: yes
   tasks:
- 
+    - name: install apache server   # name of the play
+      yum:
+        name: httpd
+        state: latest
+        update_cache: yes
+    - name: start and enable autostart of apache server
+      systemd:
+        name: httpd
+        state: started
+        enabled: yes
 
     - name: i want to install httpd webserver on RedHat 
       dnf :
