--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,7 +1,7 @@
 --- 
 - hosts: mywebservers
-  name: i want to isntall httpd webserver on redHat 
   become: yes
+  gather_facts: yes
   tasks: 
   
     - name: i want to install httpd webserver on RedHat 
